--- a/main.css
+++ b/main.css
@@ -1,154 +1,147 @@
 /*@import url(https://fonts.googleapis.com/css?family=Quicksand:400,700,300);*/
-/*@import url(https://fonts.googleapis.com/css?family=Poiret+One&subset=latin,cyrillic,latin-ext);*/
-@import url(https://fonts.googleapis.com/css?family=Josefin+Sans:400,300,700,600,400italic);
 
+
+/*@import url(https://fonts.googleapis.com/css?family=Poiret+One&subset=latin,cyrillic,latin-ext);*/
+
+@import url(https://fonts.googleapis.com/css?family=Josefin+Sans:400,300,700,600,400italic);
 * {
-  margin: 0;
-  padding: 0;
-  /*font-family: 'Quicksand';*/
-  /*font-family: 'Poiret One', cursive;*/
-  font-family: 'Josefin Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+    /*font-family: 'Quicksand';*/
+    /*font-family: 'Poiret One', cursive;*/
 }
 body {
-  background-color: #454545;
-  color: white;
-  overflow: hidden;
-  -webkit-user-select: none;
+    background-color: #454545;
+    color: white;
+    overflow: hidden;
+    -webkit-user-select: none;
 }
 .background-image {
-  position: absolute;
-  height: 100vh;
-  width: 100vw;
-  transform: scale(1.1);
-  /*top: -1vh; bottom: -1vh; left: -1vw; right: -1vw;*/
-  background-image: url('http://wallpaperlayer.com/img/2015/9/dark-wallpaper-2161-2322-hd-wallpapers.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    transform: scale(1.1);
+    /*top: -1vh; bottom: -1vh; left: -1vw; right: -1vw;*/
+    background-image: url('http://wallpaperlayer.com/img/2015/9/dark-wallpaper-2161-2322-hd-wallpapers.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
 }
-
 .top {
-  height: calc(100vh - 200px);
-  width: 100vw;
+    height: calc(100vh - 200px);
+    width: 100vw;
 }
 .bottom {
-  position: absolute;
-  bottom: 0;
-  height: 200px;
-  width: 100vw
+    position: absolute;
+    bottom: 0;
+    height: 200px;
+    width: 100vw
 }
 .separator {
-  width: 98vw;
-  height: 2px;
-  background-color: white;
-  margin: auto;
+    width: 98vw;
+    height: 2px;
+    background-color: white;
+    margin: auto;
 }
 .watch-container {
-  display: block;
-  position: absolute;
-  width: 510px;
-  margin: auto;
-  text-align: center;
-  white-space: nowrap;
-  top: calc(50% - 172px);
-  left: calc(50vw - 255px);
+    display: block;
+    position: absolute;
+    width: 510px;
+    margin: auto;
+    text-align: center;
+    white-space: nowrap;
+    top: calc(50% - 172px);
+    left: calc(50vw - 255px);
 }
-.watch {
-  font-size: 120px;
-  text-align: center;
+#watch {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 120px;
+    text-align: center;
 }
-
-.watch > div {
-  display: inline-block;
+#watch > div {
+    display: inline-block;
 }
-
 .digit-container {
-  width: 50px;
-  display: inline-block;
-  text-align: center;
-  white-space: nowrap;
+    width: 50px;
+    display: inline-block;
+    text-align: center;
+    white-space: nowrap;
 }
 .digit {
-  margin-left: -100%;
-  margin-right: -100%;
-  text-align: center;
+    margin-left: -100%;
+    margin-right: -100%;
+    text-align: center;
 }
-
 .watch-separator-container {
-  display: inline-block;
-  text-align: center;
-  white-space: nowrap;
+    display: inline-block;
+    text-align: center;
+    white-space: nowrap;
 }
 .watch-separator {
-  position: relative;
-  bottom: 15px;
-  margin-left: -15px;
-  margin-right: -15px;
-  text-align: center;
+    position: relative;
+    bottom: 15px;
+    margin-left: -15px;
+    margin-right: -15px;
+    text-align: center;
 }
-
 .selector {
-  text-align: center;
-  width: 80vw;
-  margin: auto;
-  margin-top: 60px;
+    font-family: arial;
+    text-align: center;
+    width: 80vw;
+    margin: 60px auto 20px;
 }
 .names {
-  text-align: center;
-  width: 80vw;
-  margin: auto;
+    font-family: 'Josefin Sans', sans-serif;
+    text-align: center;
+    width: 80vw;
+    margin: auto;
 }
-
 .name-separator {
-  display: inline-block;
-  width: 45px;
-  margin: 0 -6px 22px;
+    display: inline-block;
+    width: 24px;
+    margin: 0px 0px 12px;
 }
-
 .country-container {
-  display: inline-block;
-  text-align: center;
-  white-space: nowrap;
-  width: 52px;
+    display: inline-block;
+    text-align: center;
+    white-space: nowrap;
+    width: 60px;
 }
-
 .country {
-  margin-left: -100%;
-  margin-right: -100%;
-  text-align: center;
+    margin-left: -100%;
+    margin-right: -100%;
+    text-align: center;
 }
 
-/*Hexagons*/
+/* Hexagons */
 
 .hexagon {
-  display: inline-block;
-  cursor: pointer;
-  /*position: absolute;*/
-  color: rgba(255, 255, 255, 0.1);
-  font-size: 66px;
-  line-height: 66px;
-  -webkit-transform: rotate(-90deg);
-  -webkit-text-stroke: 2px white;
-  transition: color 0.2s;
+    display: inline-block;
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.1);
+    font-size: 44px;
+    line-height: 44px;
+    -webkit-transform: rotate(90deg);
+    -webkit-text-stroke: 2px white;
+    transition: color 0.2s;
+    margin: 0px -10px 0 -2px;
 }
 .hexagon:hover {
-  color: rgba(255, 255, 255, 1);
+    color: rgba(255, 255, 255, 1);
 }
-
 .hex-separator {
-  display: inline-block;
-  width: 45px;
-  height: 2px;
-  background-color: rgba(255, 255, 255, 1);
-  margin: 0 -6px 22px;
+    display: inline-block;
+    width: 55px;
+    margin: 0px 0px 14px;
+    height: 2px;
+    background-color: rgba(255, 255, 255, 1);
 }
-
 .active {
-  color: white !important;
+    color: white !important;
 }
