--- a/main.css
+++ b/main.css
@@ -178,7 +178,7 @@ body {
   height: 100vh;
   width: 250px;
   top: 0;
-  left: -250px;
+  left: -252px;
   background-color: rgba(0, 0, 0, 0.5);
   border-right: 2px solid rgba(0, 0, 0, 0.7);
   transition: left 0.3s;
@@ -194,12 +194,15 @@ body {
 .menu-item {
   padding: 20px;
   /*border-bottom: 2px solid rgba(0, 0, 0, 0.7);*/
+  -webkit-transition: background-color 0.5s;
+  -o-transition: background-color 0.5s;
+  transition: background-color 0.5s;
 }
 .menu-item:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.2);
 }
 .menu-item input[type=checkbox] {
-  margin-top: 5px;
+  margin-top: 2px;
 }
 
 .pull-right {
