--- a/main.css
+++ b/main.css
@@ -84,9 +84,11 @@ body {
     white-space: nowrap;
 }
 .digit {
+    position: relative;;
     margin-left: -100%;
     margin-right: -100%;
     text-align: center;
+    opacity: 1;
 }
 .watch-separator-container {
     display: inline-block;
